@@ -23,6 +23,7 @@ class ConnectItem extends Item
 	static final ItemField<ConnectItem2> itemField = newItemField(ConnectItem2.class);
 	static final ItemField<ConnectItem> itemFieldSelf = newItemField(ConnectItem.class);
 	static final StringField stringField = new StringField();
+	static final IntegerField integerField = new IntegerField().defaultToNext(1234);
 	
 	/**
 
@@ -136,6 +137,26 @@ class ConnectItem extends Item
 				com.exedio.cope.StringLengthViolationException
 	{
 		ConnectItem.stringField.set(this,stringField);
+	}/**
+
+	 **
+	 * Returns the value of {@link #integerField}.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.get public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final int getIntegerField()
+	{
+		return ConnectItem.integerField.getMandatory(this);
+	}/**
+
+	 **
+	 * Sets a new value for {@link #integerField}.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.set public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final void setIntegerField(final int integerField)
+	{
+		ConnectItem.integerField.set(this,integerField);
 	}/**
 
 	 **
